force-app/main/default/objects/AB4CD__MapMan__c/AB4CD__MapMan__c.object-meta.xml
<CustomObject>
    <description>Mapping Manager</description>
    <label>Map Manager</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>MID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>