force-app/main/default/objects/AB4CD__MapMan__c/fields/AB4CD__GeoField__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__GeoField__c</fullName>
    <label>Geo Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>