force-app/main/default/objects/AB4CD__MapMan__c/fields/AB4CD__NameField__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__NameField__c</fullName>
    <label>Name Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>