force-app/main/default/objects/AB4CD__MapMan__c/listViews/AB4CD__All.listView-meta.xml
<ListView>
    <fullName>AB4CD__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>